--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 14.x, 15.x]
+        node-version: [14.x, 15.x]
         runs-on: [ubuntu-latest, macos-latest, windows-latest]
 
     runs-on: ${{ matrix.runs-on }}
